--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
     <body>
         <h1>RubiscoBlack</h1>
-        <p>RubiscoBlack is an Environmental Technology & Services startup based in India. We are primarily focused on Carbon Capture and Sequestration. Email: Knock@RubiscoBlack.com</p>
+        <p>RubiscoBlack Environmental Technologies & Services Pvt Ltd.
+
+Carbon dioxide Removal(CDR) focussed startup.
+
+Nacharam-Hyderabad & Madipakkam-Chennai,India.
+
+Email: Knock@RubiscoBlack.com
+</p>
     </body>
 </html>
