--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
     <body>
         <h1>RubiscoBlack</h1>
-        <p>RubiscoBlack Environmental Technologies & Services Pvt Ltd.
+        <p>
+            
+RubiscoBlack Environmental Technologies & Services Pvt Ltd.
 
 Carbon dioxide Removal(CDR) focussed startup.
 
 Nacharam-Hyderabad & Madipakkam-Chennai,India.
 
 Email: Knock@RubiscoBlack.com
+            
 </p>
     </body>
 </html>
