--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>RubiscoBlack</h1>
+        <h1>RubiscoBlack Environmental Technologies and Services Pvt Ltd.</h1>
         <p>
             
-RubiscoBlack Environmental Technologies & Services Pvt Ltd.
-
 Carbon dioxide Removal(CDR) focussed startup.
 
 Nacharam-Hyderabad & Madipakkam-Chennai,India.
