--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <h1>RubiscoBlack Environmental Technologies and Services Pvt Ltd.</h1>
         <p>
             
-Carbon dioxide Removal(CDR) focussed startup.
+<p1>Carbon dioxide Removal(CDR) focussed startup.</p1>
 
-Nacharam-Hyderabad & Madipakkam-Chennai,India.
+<p2>Nacharam-Hyderabad & Madipakkam-Chennai,India.</p2>
 
-Email: Knock@RubiscoBlack.com
+<p3>Email: Knock@RubiscoBlack.com</p3>
             
 </p>
     </body>
